fix: negativen Abstand aus admin-anzeige entfernt, da dieser horizontale scrollbar erzeugte

--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -61,7 +61,6 @@ footer
 		> fieldset
 			display: flex
 			flex-wrap: wrap
-			margin: calc(-1 * var(--gap))
 			justify-content: space-between
 			> button
 				margin: var(--gap)
